--- a/Yolo on PYNQ.ipynb
+++ b/Yolo on PYNQ.ipynb
@@ -38,7 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = cv2.dnn.readNet('yolov3-tiny-custom_best (2).weights','yolov3-tiny-custom.cfg') # loads the weights and .cfg to run yolo"
+    "# loads the weights and .cfg to run yolo\n",
+    "net = cv2.dnn.readNet('yolov3-tiny-custom_best (2).weights','yolov3-tiny-custom.cfg')"
    ]
   },
   {
@@ -60,7 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np # Additional libraries needed\n",
+    "# Additional libraries needed\n",
+    "import numpy as np\n",
     "import time"
    ]
   },
