Added Yolov5 version

--- a/notebooks/Yolo test with ONNX file.ipynb
+++ b/notebooks/Yolo test with ONNX file.ipynb
@@ -2,25 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net = cv2.dnn.readNetFromONNX(\"best (1).onnx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,17 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layer_names = net.getLayerNames()\n",
-    "output_layers = [layer_names[i-1] for i in net.getUnconnectedOutLayers()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,105 +60,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\dnn\\src\\layers\\reshape_layer.cpp:109: error: (-215:Assertion failed) total(srcShape, srcRange.start, srcRange.end) == maskTotal in function 'cv::dnn::computeShapeByReshapeMask'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m net\u001b[38;5;241m.\u001b[39msetInput(blob)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Forward pass to get the output layer predictions\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m detections \u001b[38;5;241m=\u001b[39m \u001b[43mnet\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Process the detections\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(detections\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m2\u001b[39m]):\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\dnn\\src\\layers\\reshape_layer.cpp:109: error: (-215:Assertion failed) total(srcShape, srcRange.start, srcRange.end) == maskTotal in function 'cv::dnn::computeShapeByReshapeMask'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "while True:\n",
-    "    # Read a frame from the webcam\n",
-    "    ret, frame = cap.read()\n",
-    "    if not ret:\n",
-    "        break  # Break the loop if no frame is captured\n",
-    "    \n",
-    "    # Prepare the input image for inference (resize, normalize, etc.)\n",
-    "    blob = cv2.dnn.blobFromImage(frame, 0.00392, (416, 416), (0, 0, 0), True, crop=False)\n",
-    "    \n",
-    "    # Set the input blob for the network\n",
+    "def predict(image, net):\n",
+    "    blob = cv2.dnn.blobFromImage(image, 1/255.0, (64, 64), swapRB=True, crop=False)\n",
     "    net.setInput(blob)\n",
-    "    \n",
-    "    # Forward pass to get the output layer predictions\n",
-    "    detections = net.forward()\n",
-    "    \n",
-    "    # Process the detections\n",
-    "    for i in range(detections.shape[2]):\n",
-    "        confidence = detections[0, 0, i, 2]\n",
-    "        if confidence > 0.5:  # Filter out low-confidence detections\n",
-    "            class_id = int(detections[0, 0, i, 1])\n",
-    "            class_name = classes[class_id]\n",
-    "            box = detections[0, 0, i, 3:7] * [frame.shape[1], frame.shape[0], frame.shape[1], frame.shape[0]]\n",
-    "            (x, y, w, h) = box.astype(\"int\")\n",
-    "            \n",
-    "            # Draw bounding box and label on the frame\n",
-    "            cv2.rectangle(frame, (x, y), (w, h), (0, 255, 0), 2)\n",
-    "            text = f\"{class_name}: {confidence:.2f}\"\n",
-    "            cv2.putText(frame, text, (x, y - 5), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
-    "    \n",
-    "    # Display the frame with detections\n",
-    "    cv2.imshow(\"Object Detection\", frame)\n",
-    "    \n",
-    "    # Break the loop if 'q' key is pressed\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break\n"
+    "    preds = net.forward()\n",
+    "    return preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "def model(path):\n",
+    "    net = cv2.dnn.readNetFromONNX(path)\n",
+    "    net.setPreferableBackend(cv2.dnn.DNN_BACKEND_DEFAULT)\n",
+    "    net.setPreferableTarget(cv2.dnn.DNN_BACKEND_DEFAULT)\n",
+    "    \n",
+    "    return net\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "def format_yolov5(frame):\n",
+    "\n",
+    "    row, col, _ = frame.shape\n",
+    "    _max = max(col, row)\n",
+    "    result = np.zeros((_max, _max, 3), np.uint8)\n",
+    "    result[0:row, 0:col] = frame\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCORE_THRESHOLD = 0.2\n",
+    "NMS_THRESHOLD = 0.4\n",
+    "CONFIDENCE_THRESHOLD = 0.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wrap_detection(input_image, output_data):\n",
+    "    class_ids = []\n",
+    "    confidences = []\n",
+    "    boxes = []\n",
+    "\n",
+    "    rows = output_data.shape[0]\n",
+    "\n",
+    "    image_width, image_height, _ = input_image.shape\n",
+    "\n",
+    "    x_factor = image_width / 64\n",
+    "    y_factor =  image_height / 64\n",
+    "\n",
+    "    for r in range(rows):\n",
+    "        row = output_data[r]\n",
+    "        confidence = row[4]\n",
+    "        if confidence >= 0.4:\n",
+    "\n",
+    "            classes_scores = row[5:]\n",
+    "            _, _, _, max_indx = cv2.minMaxLoc(classes_scores)\n",
+    "            class_id = max_indx[1]\n",
+    "            if (classes_scores[class_id] > .25):\n",
+    "\n",
+    "                confidences.append(confidence)\n",
+    "\n",
+    "                class_ids.append(class_id)\n",
+    "\n",
+    "                x, y, w, h = row[0].item(), row[1].item(), row[2].item(), row[3].item() \n",
+    "                left = int((x - 0.5 * w) * x_factor)\n",
+    "                top = int((y - 0.5 * h) * y_factor)\n",
+    "                width = int(w * x_factor)\n",
+    "                height = int(h * y_factor)\n",
+    "                box = np.array([left, top, width, height])\n",
+    "                boxes.append(box)\n",
+    "\n",
+    "    indexes = cv2.dnn.NMSBoxes(boxes, confidences, 0.25, 0.45) \n",
+    "\n",
+    "    result_class_ids = []\n",
+    "    result_confidences = []\n",
+    "    result_boxes = []\n",
+    "\n",
+    "    for i in indexes:\n",
+    "        result_confidences.append(confidences[i])\n",
+    "        result_class_ids.append(class_ids[i])\n",
+    "        result_boxes.append(boxes[i])\n",
+    "\n",
+    "    return result_class_ids, result_confidences, result_boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Volume in drive C is Windows-SSD\n",
-      " Volume Serial Number is 60C1-BEC3\n",
-      "\n",
-      " Directory of c:\\Users\\perez\\OneDrive\\Documents\\GitHub\\Yolo\\weights\n",
-      "\n",
-      "04/03/2024  10:17 AM    <DIR>          .\n",
-      "04/05/2024  12:27 PM    <DIR>          ..\n",
-      "04/05/2024  04:15 PM                27 obj.names\n",
-      "03/10/2024  04:41 PM             2,084 yolov3-tiny-custom.cfg\n",
-      "03/06/2024  05:02 PM        34,723,476 yolov3-tiny-custom_best (4).weights\n",
-      "               3 File(s)     34,725,587 bytes\n",
-      "               2 Dir(s)  179,929,939,968 bytes free\n"
+      "Total frames: 1\n",
+      "Total frames: 2\n",
+      "Total frames: 3\n",
+      "Total frames: 4\n",
+      "Total frames: 5\n",
+      "Total frames: 6\n",
+      "Total frames: 7\n",
+      "Total frames: 8\n",
+      "Total frames: 9\n",
+      "Total frames: 10\n",
+      "Total frames: 11\n",
+      "Total frames: 12\n",
+      "Total frames: 13\n",
+      "Total frames: 14\n",
+      "Total frames: 15\n",
+      "Total frames: 16\n",
+      "Total frames: 17\n",
+      "Total frames: 18\n",
+      "Total frames: 19\n",
+      "Total frames: 20\n",
+      "Total frames: 21\n",
+      "Total frames: 22\n",
+      "Total frames: 23\n",
+      "Total frames: 24\n",
+      "Total frames: 25\n",
+      "Total frames: 26\n",
+      "Total frames: 27\n",
+      "Total frames: 28\n",
+      "Total frames: 29\n",
+      "Total frames: 30\n",
+      "Total frames: 31\n",
+      "Total frames: 32\n",
+      "Total frames: 33\n",
+      "Total frames: 34\n",
+      "Total frames: 35\n",
+      "Total frames: 36\n",
+      "Total frames: 37\n",
+      "Total frames: 38\n",
+      "Total frames: 39\n",
+      "Total frames: 40\n",
+      "Total frames: 41\n",
+      "Total frames: 42\n",
+      "Total frames: 43\n",
+      "Total frames: 44\n",
+      "Total frames: 45\n",
+      "Total frames: 46\n",
+      "Total frames: 47\n",
+      "Total frames: 48\n",
+      "Total frames: 49\n",
+      "Total frames: 50\n",
+      "Total frames: 51\n",
+      "Total frames: 52\n",
+      "Total frames: 53\n",
+      "Total frames: 54\n",
+      "Total frames: 55\n",
+      "Total frames: 56\n",
+      "Total frames: 57\n",
+      "Total frames: 58\n",
+      "Total frames: 59\n",
+      "Total frames: 60\n",
+      "Total frames: 61\n",
+      "Total frames: 62\n",
+      "Total frames: 63\n",
+      "Total frames: 64\n",
+      "Total frames: 65\n",
+      "Total frames: 66\n",
+      "Total frames: 67\n",
+      "Total frames: 68\n",
+      "Total frames: 69\n",
+      "Total frames: 70\n",
+      "Total frames: 71\n",
+      "Total frames: 72\n",
+      "Total frames: 73\n",
+      "Total frames: 74\n",
+      "Total frames: 75\n",
+      "Total frames: 76\n",
+      "Total frames: 77\n",
+      "Total frames: 78\n",
+      "Total frames: 79\n",
+      "Total frames: 80\n",
+      "Total frames: 81\n",
+      "Total frames: 82\n",
+      "Total frames: 83\n",
+      "Total frames: 84\n",
+      "Total frames: 85\n",
+      "Total frames: 86\n",
+      "Total frames: 87\n",
+      "Total frames: 88\n",
+      "Total frames: 89\n",
+      "Total frames: 90\n",
+      "Total frames: 91\n",
+      "Total frames: 92\n",
+      "Total frames: 93\n",
+      "Total frames: 94\n",
+      "Total frames: 95\n",
+      "Total frames: 96\n",
+      "Total frames: 97\n",
+      "Total frames: 98\n",
+      "Total frames: 99\n",
+      "Total frames: 100\n",
+      "Total frames: 101\n",
+      "Total frames: 102\n",
+      "Total frames: 103\n",
+      "Total frames: 104\n",
+      "Total frames: 105\n",
+      "Total frames: 106\n",
+      "Total frames: 107\n",
+      "Total frames: 108\n",
+      "Total frames: 109\n",
+      "Total frames: 110\n",
+      "Total frames: 111\n",
+      "Total frames: 112\n",
+      "Total frames: 113\n",
+      "Total frames: 114\n",
+      "Total frames: 115\n",
+      "Total frames: 116\n",
+      "Total frames: 117\n",
+      "Total frames: 118\n",
+      "Total frames: 119\n",
+      "Total frames: 120\n",
+      "Total frames: 121\n",
+      "Total frames: 122\n",
+      "Total frames: 123\n",
+      "Total frames: 124\n",
+      "Total frames: 125\n",
+      "Total frames: 126\n",
+      "Total frames: 127\n",
+      "Total frames: 128\n",
+      "Total frames: 129\n",
+      "Total frames: 130\n",
+      "Total frames: 131\n",
+      "Total frames: 132\n",
+      "Total frames: 133\n",
+      "Total frames: 134\n",
+      "Total frames: 135\n",
+      "Total frames: 136\n",
+      "Total frames: 137\n",
+      "Total frames: 138\n",
+      "Total frames: 139\n",
+      "Total frames: 140\n",
+      "Total frames: 141\n",
+      "Total frames: 142\n",
+      "Total frames: 143\n",
+      "Total frames: 144\n",
+      "Total frames: 145\n",
+      "Total frames: 146\n",
+      "Total frames: 147\n",
+      "Total frames: 148\n",
+      "Total frames: 149\n",
+      "Total frames: 150\n",
+      "Total frames: 151\n",
+      "Total frames: 152\n",
+      "Total frames: 153\n",
+      "Total frames: 154\n",
+      "Total frames: 155\n",
+      "Total frames: 156\n",
+      "Total frames: 157\n",
+      "Total frames: 158\n",
+      "Total frames: 159\n",
+      "Total frames: 160\n",
+      "Total frames: 161\n",
+      "Total frames: 162\n",
+      "Total frames: 163\n",
+      "Total frames: 164\n",
+      "Total frames: 165\n",
+      "Total frames: 166\n",
+      "Total frames: 167\n",
+      "Total frames: 168\n",
+      "Total frames: 169\n",
+      "Total frames: 170\n",
+      "Total frames: 171\n",
+      "Total frames: 172\n",
+      "Total frames: 173\n",
+      "Total frames: 174\n",
+      "Total frames: 175\n",
+      "Total frames: 176\n",
+      "Total frames: 177\n",
+      "Total frames: 178\n",
+      "Total frames: 179\n",
+      "Total frames: 180\n",
+      "Total frames: 181\n",
+      "Total frames: 182\n",
+      "Total frames: 183\n",
+      "Total frames: 184\n",
+      "Total frames: 185\n",
+      "Total frames: 186\n",
+      "Total frames: 187\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 18\u001b[0m\n\u001b[0;32m     14\u001b[0m fps \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 18\u001b[0m     _, frame \u001b[38;5;241m=\u001b[39m \u001b[43mcap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m frame \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     20\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnd of stream\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "!dir\n",
-    "#model = torch.hub.load('ultralytics/yolov5')"
+    "import cv2\n",
+    "import time\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "\n",
+    "colors = [(255, 255, 0), (0, 255, 0), (0, 255, 255), (255, 0, 0)]\n",
+    "\n",
+    "net = model(\"yolov5_half_export.onnx\")\n",
+    "\n",
+    "start = time.time_ns()\n",
+    "frame_count = 0\n",
+    "total_frames = 0\n",
+    "fps = -1\n",
+    "\n",
+    "while True:\n",
+    "\n",
+    "    _, frame = cap.read()\n",
+    "    if frame is None:\n",
+    "        print(\"End of stream\")\n",
+    "        break\n",
+    "\n",
+    "    inputImage = format_yolov5(frame)\n",
+    "    outs = predict(inputImage, net)\n",
+    "\n",
+    "    class_ids, confidences, boxes = wrap_detection(inputImage, outs[0])\n",
+    "\n",
+    "    frame_count += 1\n",
+    "    total_frames += 1\n",
+    "\n",
+    "    for (classid, confidence, box) in zip(class_ids, confidences, boxes):\n",
+    "         color = colors[int(classid) % len(colors)]\n",
+    "         cv2.rectangle(frame, box, color, 2)\n",
+    "         cv2.rectangle(frame, (box[0], box[1] - 20), (box[0] + box[2], box[1]), color, -1)\n",
+    "         cv2.putText(frame, classes[classid], (box[0], box[1] - 10), cv2.FONT_HERSHEY_SIMPLEX, .5, (0,0,0))\n",
+    "\n",
+    "    if frame_count >= 30:\n",
+    "        end = time.time_ns()\n",
+    "        fps = 1000000000 * frame_count / (end - start)\n",
+    "        frame_count = 0\n",
+    "        start = time.time_ns()\n",
+    "    \n",
+    "    if fps > 0:\n",
+    "        fps_label = \"FPS: %.2f\" % fps\n",
+    "        cv2.putText(frame, fps_label, (10, 25), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
+    "\n",
+    "    cv2.imshow(\"output\", frame)\n",
+    "    print(\"Total frames: \" + str(total_frames))\n",
+    "    if cv2.waitKey(1) > -1:\n",
+    "        print(\"finished by user\")\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
