added code to close webcam and hdmi output

--- a/notebooks/Yolo on PYNQ.ipynb
+++ b/notebooks/Yolo on PYNQ.ipynb
@@ -311,6 +311,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "68128fd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "videoIn.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "hdmi_out.stop()\n",
+    "del hdmi_out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "0efc16b3",
    "metadata": {},
