--- a/notebooks/YOLOv5 on PYNQ.ipynb
+++ b/notebooks/YOLOv5 on PYNQ.ipynb
@@ -255,7 +255,7 @@
    "source": [
     "colors = [(255, 255, 0), (0, 255, 0), (0, 255, 255), (255, 0, 0)]\n",
     "\n",
-    "net = model(\"yolov5_half_export.onnx\")\n",
+    "net = model(\"YOLOv5_three_gestures_int8_12.onnx\")\n",
     "\n",
     "start = time.time_ns()\n",
     "frame_count = 0\n",
@@ -323,6 +323,18 @@
     "    if cv2.waitKey(1) > -1:\n",
     "        print(\"finished by user\")\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "videoIn.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "hdmi_out.stop()\n",
+    "del hdmi_out"
    ]
   }
  ],
