--- a/notebooks/YOLOv5 on PYNQ.ipynb
+++ b/notebooks/YOLOv5 on PYNQ.ipynb
@@ -113,7 +113,7 @@
     "def model(path):\n",
     "    net = cv2.dnn.readNetFromONNX(path)\n",
     "    net.setPreferableBackend(cv2.dnn.DNN_BACKEND_DEFAULT)\n",
-    "    net.setPreferableTarget(cv2.dnn.DNN_BACKEND_DEFAULT)\n",
+    "    net.setPreferableTarget(cv2.dnn.DNN_TARGET_CPU)\n",
     "    \n",
     "    return net\n",
     "\n",
